# Hotel_Management_Backend

./: .env  Cargo.toml
src/: main.rs
src/api/: item_api.rs  mod.rs  room_api.rs  user_api.rs
src/config/: mod.rs  mongo_connection.rs
src/constants/: constants.rs
src/helpers/: mod.rs  response_function.rs
src/middleware/: admin_middleware.rs
src/models/: item_model.rs  mod.rs  room_model.rs  user_model.rs
src/repository/: item_repo.rs  mod.rs  mongodb_repo.rs  room_repo.rs  user_repo.rs
